Client: tiny CSS fix so that toolbox and component properties sections occupy more visible space.

--- a/ng-app/src/app/components/app/app.component.css
+++ b/ng-app/src/app/components/app/app.component.css
@@ -14,6 +14,11 @@
   border: 1px solid #ddd;
 }
 
+.frunze-editor__components,
+.frunze-editor__properties {
+  flex: 1;
+}
+
 .frunze-editor__workspace {
   flex: 3;
 
